# Chombo_4

./: .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Copyright.txt  README.md  doxygen.config
examples/DomainDecomposition/: CMakeLists.txt
examples/DomainDecomposition/common/: BiCGStabSolver.H  CMakeLists.txt  DebugFunctions.H  DumpArea.H  EBAdvection.H  EBAdvection.cpp  EBCCProjector.H  EBCCProjector.cpp  EBMACProjector.H  EBMACProjector.cpp  EBMultigrid.H  EBMultigrid.cpp  EBParabolicIntegrators.H  EBPetscSolver.H  EBRelaxSolver.H
examples/DomainDecomposition/hoeb_common/: CMakeLists.txt  Hoeb_Advection.H  Hoeb_Advection.cpp  Hoeb_Basics.H  Hoeb_CompositeStencil.H  Hoeb_ExactSolutions.H  Hoeb_LAPACKMatrix.H  Hoeb_LAPACKMatrix.cpp  Hoeb_Lapack.H  Hoeb_MAC_Projector.H  Hoeb_MAC_Projector.cpp  Hoeb_Neighborhood.H  Hoeb_PetscSolver.H  Hoeb_Utilities.H  Hoeb_Utilities.cpp  Hoeb_UtilitiesImplem.H
src/: CMakeLists.txt  README.md
src/BaseTools/: CH_Timer.H  CH_assert.H  CMakeLists.txt  Chombo_BaseNamespaceFooter.H  Chombo_CHOMBO_VERSION.H  Chombo_CH_System.H  Chombo_CH_System.cpp  Chombo_CH_Thread.H  Chombo_CH_Thread.cpp  Chombo_CH_Timer.H  Chombo_CH_assert.H  Chombo_CH_config.H  Chombo_CONSTANTS.H  Chombo_FortranNameMacro.H  Chombo_Interval.H  Chombo_Interval.cpp  Chombo_LAPACKMatrix.H  Chombo_LAPACKMatrix.cpp  Chombo_LoHiSide.H  Chombo_MayDay.H  Chombo_MayDay.cpp  Chombo_NamespaceHeader.H  Chombo_ParmParse.H  Chombo_ParmParse.cpp  Chombo_REAL.H  Chombo_RefCountedPtr.H  Chombo_SPMD.H  Chombo_SPMD.cpp  Chombo_SPMDI.H  Chombo_Tuple.H  Chombo_Vector.H  Chombo_parstream.H  Chombo_parstream.cpp  LAPACKMatrix.cpp  LoHiSide.H  RefCountedPtr.H  SPMD.H  SPMD.cpp  SPMDI.H  Vector.H  (+1 more)
src/BaseTools/multidim/: dim-independent-headers.txt
src/BoxTools/: AMRIO.H  AMRIO.cpp  BaseFab.H  BaseFabImplem.H  Box.H  Box.cpp  BoxLayout.H  BoxLayout.cpp  BoxLayoutData.H  BoxLayoutData.cpp  BoxLayoutDataI.H  CH_HDF5.H  CH_HDF5.cpp  CMakeLists.txt  Chombo_AMRIO.H  Chombo_AMRIO.cpp  Chombo_BFM.H  Chombo_BRMeshRefine.H  Chombo_BRMeshRefine.cpp  Chombo_BaseFab.H  Chombo_BaseFab.cpp  Chombo_BaseFabImplem.H  Chombo_BitSet.H  Chombo_BitSet.cpp  Chombo_BoundaryIterator.H  Chombo_BoundaryIterator.cpp  Chombo_Box.H  Chombo_Box.cpp  Chombo_BoxIterator.H  Chombo_BoxIterator.cpp  Chombo_BoxLayout.H  Chombo_BoxLayout.cpp  Chombo_BoxLayoutData.H  Chombo_BoxLayoutData.cpp  Chombo_BoxLayoutDataI.H  Chombo_CH_HDF5.H  Chombo_CH_HDF5.cpp  Chombo_CH_OpenMP.H  Chombo_Copier.H  Chombo_Copier.cpp  (+84 more)
src/CrunchFlow/: AffinityNumerical.cpp  AqueousToBulkConvert.cpp  CMakeLists.txt  Doxyfile  IntVect.H  MayDay.cpp  Misc.H  SpeciesLocal.cpp  assemble_local.cpp  crunchflow.h  fit.cpp  fitgamma.cpp  fx_local.cpp  gamma.cpp  jac_local.cpp  jacmin.cpp  keqcalc2.cpp  offsets.h  os3d_newton.cpp  reaction.cpp  satcalc.cpp  totconc.cpp
src/CrunchFlow/html/: BaseNamespaceFooter_8H_source.html  BaseNamespaceHeader_8H_source.html  CHOMBO__VERSION_8H_source.html  CH__assert_8H_source.html  GenericArithmeticI_8H_source.html  GenericArithmetic_8H_source.html  IndexTMI_8H_source.html  IndexTM_8H_source.html  IntVect_8H_source.html  MayDay_8H_source.html  Metaprograms_8H_source.html  Misc_8H_source.html  NamespaceFooter_8H_source.html  NamespaceHeader_8H_source.html  NamespaceVar_8H_source.html  REAL_8H_source.html  SPACE_8H_source.html  SPMDI_8H_source.html  SPMD_8H_source.html  ShapeArray_8H_source.html  UsingNamespace_8H_source.html  Vector_8H_source.html  annotated.html  classIndexTM-members.html  classIndexTM.html  classIndexTM__coll__graph.md5  classIndexTM__inherit__graph.map  classIndexTM__inherit__graph.md5  classIntVect-members.html  classIntVect.html  classIntVect__coll__graph.map  classIntVect__coll__graph.md5  classMayDay-members.html  classMayDay.html  classMisc_1_1TypeTr-members.html  classMisc_1_1TypeTr.html  classSerialTask-members.html  classSerialTask.html  classVector-members.html  classVector.html  (+154 more)
src/EBCM/: Chombo_EBCMGraph.H  Chombo_EBCMLevelData.H  Chombo_EBCM_Algorithm_Framework.H  Chombo_EBCM_Basics.H  Chombo_EBCM_ExactSolutions.H  Chombo_EBCM_Graph.H  Chombo_EBCM_Helmholtz.H  Chombo_EBCM_HostLevelData.H  Chombo_EBCM_PETSc_Framework.H  Chombo_EBCM_PetscSolver.H  Chombo_EBCM_VolBoxData.H  notes.tex
src/EBProto/: CMakeLists.txt  EBProto.H  Proto_BaseIF.H  Proto_EBBoxData.H  Proto_EBDictionary.H  Proto_EBExactSolutions.H  Proto_EBFluxData.H  Proto_EBGraph.H  Proto_EBHostData.H  Proto_EBHostFluxData.H  Proto_EBStencil.H  Proto_HostBoxData.H  Proto_MomentHolder.H  Proto_RealVect.H  Proto_SimpleImplicitFunctions.H
src/EBProto/hoeb/: Proto_EBDomainBC.H  Proto_EBStencilHO.H  Proto_EBStencilHOImplem.H  Proto_WLSCell.H  Proto_WLSCellImplem.H  Proto_WLSStencil.H  Proto_WLSStencilImplem.H  Proto_WLSneighbors.H
src/EBProto/implem/: Proto_AggStencil.H  Proto_AggStencilImplem.H  Proto_Contains.H  Proto_EBForAllImplem.H  Proto_EBGraphImplem.H  Proto_EBIrregStruct.H  Proto_EBStencilArchive.H  Proto_EBStencilArchiveImplem.H  Proto_EBStencilImplem.H  Proto_HostBoxDataImplem.H  Proto_HostIrregData.H  Proto_IFDataImplem.H  Proto_IndexTM.H  Proto_IndexedMoments.H  Proto_IndexedMomentsImplem.H  Proto_IrregData.H  (+13 more)
src/EBTools/: CMakeLists.txt  Chombo_BoxPattern.H  Chombo_CommunicationMetaData.H  Chombo_DistributedData.H  Chombo_EBChombo.H  Chombo_EBDataChoreography.H  Chombo_EBDictionary.H  Chombo_EBDictionaryImplem.H  Chombo_EBEncyclopedia.H  Chombo_EBLevelBoxData.H  Chombo_EBLevelFluxData.H  Chombo_EBPETcOperator.H  Chombo_GeometryService.H  Chombo_GeometryServiceImplem.H  Chombo_ProtoFactories.H  Chombo_SmoothAbsoluteValue.H  Chombo_SmoothAbsoluteValue.cpp  Chombo_SmoothIntersection.H  Chombo_SmoothIntersection.cpp  Chombo_SmoothUnion.H  Chombo_SmoothUnion.cpp  Chombo_UnionIntersection.H  Chombo_UnionIntersection.cpp  EBChombo.H  EBDictionary.H  EBDictionaryImplem.H  EBEncyclopedia.H  EBLevelBoxData.H  GeometryService.H  GeometryServiceImplem.H  ProtoFactories.H
src/LinearAlgebra/: Chombo_EigenMatrix.H  Chombo_LAPACKMatrix.H  Chombo_LAPACKMatrix.cpp  Chombo_Lapack.H
src/proto/: .#README.md  README.md
(+4211 files in other folders)
