blt_import_library(NAME PETSc INCLUDES ${PETSC_DIR}/include
    TREAT_INCLUDES_AS_SYSTEM ON)
add_subdirectory(common)
add_subdirectory(hoeb_common)
add_subdirectory(EBAdvection)
add_subdirectory(EBApply)
#add_subdirectory(EBCrunch)
add_subdirectory(EBDarcyAdvectDiffuseReact)
add_subdirectory(EBHeat)
add_subdirectory(EBHelmholtz)
add_subdirectory(EBINS)
add_subdirectory(EBMenagerie)
#add_subdirectory(EBPETSc)
add_subdirectory(EBSmallTest)
add_subdirectory(Euler)
add_subdirectory(MHD)
